# agent-context-doctor

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  HANDOFF.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.cursor/rules/: agentctx.md
.github/: FUNDING.yml  copilot-instructions.md  repository-topics.txt
.github/workflows/: ci.yml
docs/: github-setup.md  usage.md
src/agentctx/: __init__.py  cli.py  doctor.py  handoff.py  initializer.py  markers.py  models.py  packer.py  scanner.py  syncer.py  templates.py  utils.py
tests/: test_doctor.py  test_handoff_pack.py  test_init.py  test_scan.py  test_sync.py  test_verify_badge.py
